--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <th>Strongly Agree</th>
         </tr>
         <tr>
-            <td colspan="1"> Our products are priced fairly</td>
+            <td> Our products are priced fairly</td>
             <td><input type="radio"> <br>1</td>
             <td><input type="radio"> <br>2</td>
             <td><input type="radio"> <br>3</td>
